@@ -1,5 +1,6 @@
 CHANGES IN FLTK 1.1.0b8
 
+	- Mac: list all fonts, clipping bug, moue pointer bug
 	- The Fl_File_Chooser widget now uses hotspot() to
 	  position the dialog under the mouse pointer prior to
 	  showing it.
